    + Correction du décallage de l'heure de prise de l'image webcam
    + Correction de la valeur de la seconde tolérance 
    + Masque par défaut à 255.255.255.0 si non définit
    + Correction de l'affichage de la partie wifi
    + Suppréssion des options inutiles pour le wifi
    + Suppréssion des scripts qui tournent en boucle avec le setTimeout ou setInterval

-- Yann Genevois <yann.genevois@cultibox.fr> Thu Feb 10 16:16:35 CEST 2015


Cultibox (2.0.34) precise; urgency=low
    + Corrections création image webcam
    + Correction bouton enregistrer la configuration
    + Correction locales

-- Yann Genevois <yann.genevois@cultibox.fr> Thu Feb 05 11:42:46 CEST 2015


Cultibox (2.0.33) precise; urgency=low
    + Corrections import/export pour Windows

-- Yann Genevois <yann.genevois@cultibox.fr> Wed Feb 04 11:46:28 CEST 2015


Cultibox (2.0.32) precise; urgency=low
    + Import/export d'une configuration

-- Yann Genevois <yann.genevois@cultibox.fr> Tue Feb 03 15:43:12 CEST 2015


Cultibox (2.0.31) precise; urgency=low
    + Fenêtre d'attente de chargement des pages

-- Yann Genevois <yann.genevois@cultibox.fr> Mon Feb 02 18:24:56 CEST 2015


Cultibox (2.0.30) precise; urgency=low
    + Possibilité de voir et télécharger les logs des services
    + Ajout de l'export de la configuration

-- Yann Genevois <yann.genevois@cultibox.fr> Sat Jan 31 10:42:23 CEST 2015


Cultibox (2.0.29) precise; urgency=low
    + Correction de la prise d'image pour les webcams
    + Suppréssion de la configuration de la couleur des puissances
    + Ajout d'un message à la fin de la synchronisation
    + Correction de la boite de dialgue
    + Correction de la synchronisation
    + Correction du décallage d'une here sur les programmes
    + Fonction d'upgrade des packages

-- Yann Genevois <yann.genevois@cultibox.fr> Thu Jan 29 12:12:34 CEST 2015


Cultibox (2.0.28) precise; urgency=low
    + Remise en forme de l'administration du Cultipi