@@ -5,6 +5,8 @@ Cultibox (2.0.35) precise; urgency=low
     + Correction de l'affichage de la partie wifi
     + Suppréssion des options inutiles pour le wifi
     + Suppréssion des scripts qui tournent en boucle avec le setTimeout ou setInterval
+    + Ajout d'un bouton de RAZ de la configuraiton réseau
+    + Ajout d'un bouton de téléchargement du service Bonjour
 
 -- Yann Genevois <yann.genevois@cultibox.fr> Thu Feb 10 16:16:35 CEST 2015
 
